tests/ui/typech/implicit_literal_conversion_int_3.lm
fn foo() -> Int32 {
    0_u64
}
